--- a/index.html
+++ b/index.html
@@ -1,12 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello world</h1>
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>document</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="">WebStudio</a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </address>
+    </header>
+    <main>
+      <!-- hero -->
+      <div>
+        <section>
+          <h1>Эффективные решения для вашего бизнеса</h1>
+          <!-- button -->
+        </section>
+      </div>
+
+      <!-- qualities -->
+      <section>
+        <h2>Особенности</h2>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </section>
+      <!-- what we do -->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img src="" alt="Web Design" width="370" />
+          </li>
+          <li>
+            <img src="" alt="Mobile application development" width="370" />
+          </li>
+          <li>
+            <img src="" alt="Design" width="370" />
+          </li>
+        </ul>
+      </section>
+
+      <!-- team -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="" alt="Игорь Демьяненко" width="270" />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="" alt="Ольга Репина" width="270" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="" alt="Николай Тарасов" width="270" />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="" alt="Михаил Ермаков" width="270" />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href=""></a>
+      <address>
+        <ul>
+          <li>г. Киев, пр-т Леси Украинки, 26</li>
+          <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
