--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
       <nav>
         <a href="">WebStudio</a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <div>
@@ -25,45 +25,51 @@
     <main>
       <!-- hero -->
       <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <!-- button -->
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
       </section>
 
-      <!-- qualities -->
+      <!-- qualities... are not so good regarding the text -->
       <section>
-        <h2>Особенности</h2>
+        <h2>Особливості</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <p>Увага до деталей</p>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <p>Пунктуальність</p>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <p>Планування</p>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <p>Сучасні технології</p>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
-      
+
       <!-- what we do -->
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/box1.jpg" alt="Десктопные приложения" width="370" height="294"/>
+            <a href="">
+              <img src="./images/box-1.jpg" alt="Десктопні програми" width="370" />
+            </a>
           </li>
           <li>
-            <img src="./images/box2.jpg" alt="Мобильные приложения" width="370" height="294"/>
+            <a href="">
+              <img src="./images/box-2.jpg" alt="Мобільні додатки" width="370" />
+            </a>
           </li>
           <li>
-            <img src="./images/box3.jpg" alt="Дизайнерские решения" width="370" height="294"/>
+            <a href="">
+              <img src="./images/box-3.jpg" alt="Дизайнерські рішення" width="370" />
+            </a>
           </li>
         </ul>
       </section>
@@ -73,23 +79,23 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
+            <img src="./images/img-1.jpg" alt="Фото Ігора Дем'яненко" width="270" />
+            <p>Ігор Дем'яненко</p>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3>Ольга Репина</h3>
+            <img src="./images/img-2.jpg" alt="Фото Ольги Рєпіної" width="270" />
+            <p>Ольга Рєпіна</p>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
+            <img src="./images/img-3.jpg" alt="Фото Миколи Тарасова" width="270" />
+            <p>Микола Тарасов</p>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
+            <img src="./images/img-4.jpg" alt="Фото Михайла Єрмакова" width="270" />
+            <p>Михайло Єрмаков</p>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -98,17 +104,17 @@
 
     <footer>
       <a href="">WebStudio</a>
-      <address>
-        <ul>
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <ul>
+        <li>
+          <address>м. Киев, пр-т Лесі Українки, 26</address>
+        </li>
+        <li>
+          <a href="mailto:info@example.com">info@example.com</a>
+        </li>
+        <li>
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
