--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <main>
@@ -34,19 +34,19 @@
         <h2>Особливості</h2>
         <ul>
           <li>
-            <p>Увага до деталей</p>
+            <h3>Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <p>Пунктуальність</p>
+            <h3>Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <p>Планування</p>
+            <h3>Планування</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <p>Сучасні технології</p>
+            <h3>Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
@@ -80,22 +80,22 @@
         <ul>
           <li>
             <img src="./images/img-1.jpg" alt="Фото Ігора Дем'яненко" width="270" />
-            <p>Ігор Дем'яненко</p>
+            <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Фото Ольги Рєпіної" width="270" />
-            <p>Ольга Рєпіна</p>
+            <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-3.jpg" alt="Фото Миколи Тарасова" width="270" />
-            <p>Микола Тарасов</p>
+            <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="Фото Михайла Єрмакова" width="270" />
-            <p>Михайло Єрмаков</p>
+            <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -104,17 +104,19 @@
 
     <footer>
       <a href="">WebStudio</a>
-      <ul>
-        <li>
-          <address>м. Киев, пр-т Лесі Українки, 26</address>
-        </li>
-        <li>
-          <a href="mailto:info@example.com">info@example.com</a>
-        </li>
-        <li>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
