--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./index.html">Портфоліо</a></li>
+          <li><a href="./index.html">Контакти</a></li>
         </ul>
       </nav>
       <ul>
@@ -57,19 +57,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <a href="">
-              <img src="./images/box-1.jpg" alt="Десктопні програми" width="370" />
-            </a>
+            <img src="./images/box-1.jpg" alt="Десктопні програми" width="370" />
           </li>
           <li>
-            <a href="">
-              <img src="./images/box-2.jpg" alt="Мобільні додатки" width="370" />
-            </a>
+            <img src="./images/box-2.jpg" alt="Мобільні додатки" width="370" />
           </li>
           <li>
-            <a href="">
-              <img src="./images/box-3.jpg" alt="Дизайнерські рішення" width="370" />
-            </a>
+            <img src="./images/box-3.jpg" alt="Дизайнерські рішення" width="370" />
           </li>
         </ul>
       </section>
@@ -103,11 +97,15 @@
     </main>
 
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a>
           </li>
           <li>
             <a href="mailto:info@example.com">info@example.com</a>
